GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/Gift_Agreement__c.object-meta.xml
<CustomObject>
    <description>AQ_Custom</description>
    <label>Gift Agreement</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Gift Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>