GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Additional_Donor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Donor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional Donor Contact</description>
    <inlineHelpText>Additional Donor Contact</inlineHelpText>
    <label>Additional Donor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Agreements (Additional Donor Contact)</relationshipLabel>
    <relationshipName>Gift_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>