GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Anonymous_Gift__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an Anonymous Gift? (Please note: anonymous gifts require VP approval)</description>
    <inlineHelpText>Is this an Anonymous Gift? (Please note: anonymous gifts require VP approval)</inlineHelpText>
    <label>Anonymous Gift</label>
    <type>Checkbox</type>
</CustomField>