GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Associated School(s), Department(s), Programs benefiting from the gift</description>
    <inlineHelpText>Associated School(s), Department(s), Programs benefiting from the gift</inlineHelpText>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>