GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Donor_Account__c.field-meta.xml
<CustomField>
    <fullName>Donor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account of the Donor</description>
    <inlineHelpText>Account of the Donor</inlineHelpText>
    <label>Donor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Agreements</relationshipLabel>
    <relationshipName>Gift_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>