GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Donor_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Donor_Relationship__c</fullName>
    <description>Describe the Donor&apos;s Relationship to CMU</description>
    <inlineHelpText>Describe the Donor&apos;s Relationship to CMU</inlineHelpText>
    <label>Donor Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>