GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Draft_Deadilne__c.field-meta.xml
<CustomField>
    <fullName>Draft_Deadilne__c</fullName>
    <description>By when do you need the CMU-approved draft to share with the donor?</description>
    <inlineHelpText>By when do you need the CMU-approved draft to share with the donor?</inlineHelpText>
    <label>Draft Deadilne</label>
    <type>Date</type>
</CustomField>