GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Employer_Match_Amount__c.field-meta.xml
<CustomField>
    <fullName>Employer_Match_Amount__c</fullName>
    <label>Employer Match Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>