GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Existing_Fund__c.field-meta.xml
<CustomField>
    <fullName>Existing_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Chart of Accounts Fund, if it already exists</description>
    <inlineHelpText>Link to the Chart of Accounts Fund, if it already exists</inlineHelpText>
    <label>Existing Fund</label>
    <referenceTo>AQB__LLChartofAccounts__c</referenceTo>
    <relationshipLabel>Gift Agreements</relationshipLabel>
    <relationshipName>Gift_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>