GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <description>If unknown, use June 30 or Dec 31.  (Must be within 1 year of Gift Agreement date, or requires VP Approval).</description>
    <inlineHelpText>If unknown, use June 30 or Dec 31.  (Must be within 1 year of Gift Agreement date, or requires VP Approval).</inlineHelpText>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>