GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Fund_Preferences_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Fund_Preferences_Restrictions__c</fullName>
    <label>Fund Preferences / Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>