GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <description>Select all that apply</description>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Fund Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endowed</fullName>
            </value>
            <value>
                <fullName>Spendable</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>