GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Gift_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Gift_Facilitator__c</fullName>
    <description>Who was involved in making this gift happen?</description>
    <inlineHelpText>Who was involved in making this gift happen?</inlineHelpText>
    <label>Gift Facilitator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>