GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Gift_Intent__c.field-meta.xml
<CustomField>
    <fullName>Gift_Intent__c</fullName>
    <description>What will this gift support?  Select all that apply.  (Note: Prize/Award requires VP approval)</description>
    <inlineHelpText>What will this gift support?  Select all that apply.  (Note: Prize/Award requires VP approval)</inlineHelpText>
    <label>Gift Intent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduate Fellowship</fullName>
            </value>
            <value>
                <fullName>Financial Aid Scholarship</fullName>
            </value>
            <value>
                <fullName>Prize/Award</fullName>
            </value>
            <value>
                <fullName>Student Program</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Full Professorship</fullName>
            </value>
            <value>
                <fullName>Career Development Professorship</fullName>
            </value>
            <value>
                <fullName>Center Support</fullName>
            </value>
            <value>
                <fullName>SURG</fullName>
            </value>
            <value>
                <fullName>Library/Archives</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>