GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Gift_Intent_Additional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Gift_Intent_Additional_Comment__c</fullName>
    <description>Additional Gift Intent not listed above</description>
    <inlineHelpText>Additional Gift Intent not listed above</inlineHelpText>
    <label>Gift Intent Additional Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>