GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Gift_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Gift_Purpose__c</fullName>
    <description>Check all that apply</description>
    <inlineHelpText>Check all that apply</inlineHelpText>
    <label>Gift Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Establish New Fund(s)</fullName>
            </value>
            <value>
                <fullName>Support Existing Fund(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>