GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Gift_Reason__c.field-meta.xml
<CustomField>
    <fullName>Gift_Reason__c</fullName>
    <description>Why is the donor making this gift to CMU?</description>
    <inlineHelpText>Why is the donor making this gift to CMU?</inlineHelpText>
    <label>Gift Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>