GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Main_Donor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Donor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main Donor Contact</description>
    <inlineHelpText>Main Donor Contact</inlineHelpText>
    <label>Main Donor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Agreements (Main Contact)</relationshipLabel>
    <relationshipName>Gift_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>