GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gift Agreements</relationshipLabel>
    <relationshipName>Gift_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>