GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Select all that apply</description>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Funding Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donor-Advised Fund</fullName>
            </value>
            <value>
                <fullName>Private Family Foundation</fullName>
            </value>
            <value>
                <fullName>Cash Gift</fullName>
            </value>
            <value>
                <fullName>Marketable Security (Stock)</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency (Bitcoin)</fullName>
            </value>
            <value>
                <fullName>CMU Match</fullName>
            </value>
            <value>
                <fullName>Employer Match</fullName>
            </value>
            <value>
                <fullName>Planned/Estate Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>