GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Payment_Span__c.field-meta.xml
<CustomField>
    <fullName>Payment_Span__c</fullName>
    <description>Over how many years will this donor pay on the gift?  (Longer than 5 years requires VP approval)</description>
    <inlineHelpText>Over how many years will this donor pay on the gift?  (Longer than 5 years requires VP approval)</inlineHelpText>
    <label>Payment Span</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 Years</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>Longer than 5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>