GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Personal_Commitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Personal_Commitment_Amount__c</fullName>
    <label>Personal Commitment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>