GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual requesting the Gift Agreement</description>
    <inlineHelpText>The individual requesting the Gift Agreement</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gift_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>