GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Date__c</fullName>
    <description>Date on which the donor will sign the agreement</description>
    <inlineHelpText>Date on which the donor will sign the agreement</inlineHelpText>
    <label>Sign Date</label>
    <type>Date</type>
</CustomField>