GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Supplemental_Information__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Information__c</fullName>
    <description>Additional comments or information about the Gift Agreement request, Donor, or other helpful details</description>
    <inlineHelpText>Additional comments or information about the Gift Agreement request, Donor, or other helpful details</inlineHelpText>
    <label>Supplemental Information</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>