GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/fields/Total_Commmitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commmitment_Amount__c</fullName>
    <label>Total Commmitment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>