GiftAgreement/force-app/main/default/objects/Gift_Agreement__c/recordTypes/Request_Form.recordType-meta.xml
<RecordType>
    <fullName>Request_Form</fullName>
    <active>true</active>
    <description>Request a Gift Agreement</description>
    <label>Request Form</label>
</RecordType>